Changed static file location in html files

--- a/templates/mc.html
+++ b/templates/mc.html
@@ -6,11 +6,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- online: https://www.w3schools.com/w3css/4/w3.css -->
-<link rel="stylesheet" href="static/w3.css">
-<link rel="stylesheet" href="static/style.css">
+<link rel="stylesheet" href="static/tanks/w3.css">
+<link rel="stylesheet" href="static/tanks/style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-<link rel="shortcut icon" type="image/png" href="static/tank.png"/>
+<link rel="shortcut icon" type="image/png" href="static/tanks/tank.png"/>
 <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 
 <style>
@@ -99,7 +99,7 @@
     </div>
 </div>
 
-<script src="static/mc/bundle.js"></script>
+<script src="static/tanks/mc/bundle.js"></script>
 </body>
 
 </html>
