--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- online: https://www.w3schools.com/w3css/4/w3.css -->
-<link rel="stylesheet" href="static/tanks/w3.css">
-<link rel="stylesheet" href="static/tanks/style.css">
+<link rel="stylesheet" href="/tanks-static/tanks/css/w3.css">
+<link rel="stylesheet" href="/tanks-static/tanks/css/style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 <link rel="shortcut icon" type="image/png" href="static/tanks/tank.png"/>
@@ -110,7 +110,7 @@
     <!-- End page content -->
 </div>
 
-<script src="static/tanks/bundle.js"></script>
+<script src="/tanks-static/tanks/js/bundle.js"></script>
 </body>
 
 </html>
