--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,7 @@
+{% extends 'base_generic.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html style="overflow-x:visible">
-<title>Tanks</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- online: https://www.w3schools.com/w3css/4/w3.css -->
-<link rel="stylesheet" href="/tanks-static/tanks/css/w3.css">
-<link rel="stylesheet" href="/tanks-static/tanks/css/style.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-<link rel="shortcut icon" type="image/png" href="static/tanks/tank.png"/>
-<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 
-<style>
-    body,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        font-family: "Raleway", sans-serif
-    }
-</style>
-
-<body>
+{% block content %}
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-white w3-animate-left" style="z-index:3;width:300px;display:none" id="mySidebar">
     <div class="w3-container">
@@ -111,6 +88,4 @@
 </div>
 
 <script src="/tanks-static/tanks/js/bundle.js"></script>
-</body>
-
-</html>
+{% endblock %}
