--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/tanks-static/tanks/css/style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-<link rel="shortcut icon" type="image/png" href="static/tanks/tank.png"/>
+<link rel="shortcut icon" type="image/png" href="/tanks-static/tanks/tank.png"/>
 <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 
 <style>
