--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,10 +1,12 @@
 {% extends "base_generic.html" %}
-{% block title %}
-Logout -
-{% endblock %}
-{% block content %}
-<p>Logged out!</p>  
 
-<p><a href="{% url 'entries:index' %}">Go back to entries.</a></p>
-<p><a href="{% url 'login'%}">Click here to login again.</a></p>
+{% block content %}
+    <div class="w3-display-container tanks-login-form-container">
+        <div class="w3-display-middle mc-modal-content">
+            <p>Logged out!</p>
+
+            <p><a type="button" class="w3-button w3-border" href="/tanks">Go back to game.</a></p>
+            <p><a type="button" class="w3-button w3-border" href="{% url 'login' %}">Click here to login again.</a></p>
+        </div>
+    </div>
 {% endblock %}
