--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,10 +1,14 @@
 {% extends "base_generic.html" %}
 {% block content %}
 
-<form action="" method="post">{% csrf_token %}
-    {% if form.email.errors %} {{ form.email.errors }} {% endif %}
-        <p>{{ form.email }}</p> 
-    <input type="submit" class="btn btn-default btn-lg" value="Reset password" />
-</form>
+    <div class="w3-display-container tanks-login-form-container">
+        <div class="w3-display-middle mc-modal-content">
+            <form action="" method="post">{% csrf_token %}
+                {% if form.email.errors %} {{ form.email.errors }} {% endif %}
+                <p>Your email: {{ form.email }}</p>
+                <input type="submit" class="btn btn-default btn-lg" value="Reset password"/>
+            </form>
+        </div>
+    </div>
 
 {% endblock %}
