Index now shows login/logout, made buttons prettier

--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -5,8 +5,9 @@
         <div class="w3-display-middle mc-modal-content">
             <p>Logged out!</p>
 
-            <p><a type="button" class="w3-button w3-border" href="/tanks">Go back to game.</a></p>
-            <p><a type="button" class="w3-button w3-border" href="{% url 'login' %}">Click here to login again.</a></p>
+            <p><a class="w3-button w3-border w3-margin-top" href="/tanks">Go back to game.</a></p>
+            <p><a class="w3-button w3-border w3-margin-top" href="{% url 'login' %}">Click here to login
+                again.</a></p>
         </div>
     </div>
 {% endblock %}
