--- a/templates/index.html
+++ b/templates/index.html
@@ -2,90 +2,76 @@
 {% load static %}
 
 {% block content %}
-<!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-white w3-animate-left" style="z-index:3;width:300px;display:none" id="mySidebar">
-    <div class="w3-container">
-        <div class="w3-row">
-            <div class="w3-col s2 m2 l2 w3-dropdown-click w3-margin-top">
-                <button onclick="Controls.toggleRepositoryOptions()" class="w3-button w3-white full-width">
-                    <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
-                </button>
-                <div id="repository-options" class="w3-dropdown-content w3-bar-block w3-border">
-                    <a class="w3-bar-item w3-button" onclick="Controls.showCredentials()">Show credentials</a>
-                    <a class="w3-bar-item w3-button" onclick="Controls.toggleRepositoryOptions()">Link 2</a>
-                    <a class="w3-bar-item w3-button" onclick="Controls.toggleRepositoryOptions()">Link 3</a>
+    <!-- Sidebar/menu -->
+    <nav class="w3-sidebar w3-white w3-animate-left" style="z-index:3;width:300px;display:none" id="mySidebar">
+        <div class="w3-container">
+            <div class="w3-row">
+                <div class="w3-col s10 m10 l10">
+                    <h1>
+                        <b>User account</b>
+                    </h1>
                 </div>
             </div>
-            <div class="w3-col s10 m10 l10">
-                <h1>
-                    <b>User account</b>
-                </h1>
-            </div>
         </div>
-    </div>
-    <div class="w3-container">
-        <form id="user-credential-form" action="post">
+        <div class="w3-container">
+            {% if user.is_authenticated %}
+                <p>Logged in as: {{ user.username }} </p>
+                <a class="w3-button w3-border" href="{% url 'logout' %}">Logout</a>
+            {% else %}
+                You are not logged in.
+                <a class="w3-button w3-border" href="{% url 'login' %}">Login</a>
+            {% endif %}
 
-            <div id="username">
-                <input class="w3-input w3-border" type="text" placeholder="Username" value="DTasev" name="username"/>
-            </div>
-            <div id="password">
-                <input class="w3-input w3-border" type="password" placeholder="Password" name="password" value=""/>
-            </div>
-            <div id="button-submit">
-                <button class="w3-button w3-white w3-border" type="submit">Login</button>
-            </div>
-        </form>
-        <div id="error-message" class="w3-row"></div>
-    </div>
-    <div class="w3-panel w3-large">
-        <a href="https://www.github.com/dtasev/mp-fe" target="_blank" class="out-link">
-            <i class="fab fa-github w3-hover-opacity"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/dtasev/" target="_blank" class="out-link">
-            <i class="fab fa-linkedin w3-hover-opacity"></i>
-        </a>
-    </div>
-</nav>
+        </div>
+        <div class="w3-panel w3-large">
+            <a href="https://www.github.com/dtasev/mp-fe" target="_blank" class="out-link">
+                <i class="fab fa-github w3-hover-opacity"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/dtasev/" target="_blank" class="out-link">
+                <i class="fab fa-linkedin w3-hover-opacity"></i>
+            </a>
+        </div>
+    </nav>
 
-<!-- Overlay effect when opening sidebar on small screens -->
-<div class="w3-overlay w3-animate-opacity" onclick="Controls.w3_close()" style="cursor:pointer" title="close side menu"
-     id="myOverlay"></div>
+    <!-- Overlay effect when opening sidebar on small screens -->
+    <div class="w3-overlay w3-animate-opacity" onclick="Controls.w3_close()" style="cursor:pointer"
+         title="close side menu"
+         id="myOverlay"></div>
 
-<!-- !PAGE CONTENT! -->
-<div class="w3-main">
+    <!-- !PAGE CONTENT! -->
+    <div class="w3-main">
 
-    <!-- Header -->
-    <!-- <header id="portfolio"> -->
-    <!-- <a href="#">
-            <img src="/w3images/avatar_g2.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity">
-        </a> -->
-    <!-- <div class="w3-row">
-            <div class="w3-col s2 m2 l2">
-                <span class="w3-button w3-xxlarge w3-hover-text-grey" onclick="Controls.w3_open()">
-                    <i class="fas fa-bars"></i>
-                </span>
-            </div>
-            <div class="w3-col s10 m10 l10">
-                <h2>
-                    <b id="user-warning"></b>
-                    <span hidden id="loading-icon">
-                        <i class="fa fa-spinner fa-pulse fa-fw"></i>
+        <!-- Header -->
+        <!-- <header id="portfolio"> -->
+        <!-- <a href="#">
+                <img src="/w3images/avatar_g2.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity">
+            </a> -->
+        <!-- <div class="w3-row">
+                <div class="w3-col s2 m2 l2">
+                    <span class="w3-button w3-xxlarge w3-hover-text-grey" onclick="Controls.w3_open()">
+                        <i class="fas fa-bars"></i>
                     </span>
-                </h2>
+                </div>
+                <div class="w3-col s10 m10 l10">
+                    <h2>
+                        <b id="user-warning"></b>
+                        <span hidden id="loading-icon">
+                            <i class="fa fa-spinner fa-pulse fa-fw"></i>
+                        </span>
+                    </h2>
+                </div>
+            </div>
+        </header> -->
+
+        <div class="canvas-holder container">
+            <div class="child">
+                <canvas id="tanks-canvas" class="game-canvas"></canvas>
+            </div>
+            <div id="tanks-ui" class="child">
             </div>
         </div>
-    </header> -->
-
-    <div class="canvas-holder container">
-        <div class="child">
-            <canvas id="tanks-canvas" class="game-canvas"></canvas>
-        </div>
-        <div id="tanks-ui" class="child">
-        </div>
+        <!-- End page content -->
     </div>
-    <!-- End page content -->
-</div>
 
-<script src="/tanks-static/tanks/js/bundle.js"></script>
+    <script src="/tanks-static/tanks/js/bundle.js"></script>
 {% endblock %}
