--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -5,7 +5,6 @@
         <div class="w3-display-middle mc-modal-content">
             {% if user.is_authenticated %}
                 <a href="{% url 'logout' %}">Logout</a>
-
             {% else %}
 
                 {% if form.errors %}
@@ -34,13 +33,11 @@
                     </div>
 
                     <div>
-                        <input type="submit" value="Login"/>
+                        <input class="w3-button w3-border w3-margin-top" type="submit" value="Login"/>
                         <input type="hidden" name="next" value="{{ next }}"/>
                     </div>
                 </form>
 
-                {# Assumes you setup the password_reset view in your URLconf #}
-                <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
             {% endif %}
         </div>
     </div>
