Added signup page

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
             {% else %}
                 You are not logged in.
                 <a class="w3-button w3-border" href="{% url 'login' %}">Login</a>
+                <a class="w3-button w3-border" href="{% url 'signup' %}">Register</a>
             {% endif %}
 
         </div>
