Removed hard-coded static path from templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,5 +51,5 @@
         <!-- End page content -->
     </div>
 
-    <script src="/tanks-static/tanks/js/bundle.js"></script>
+    <script src="{% static "tanks/js/bundle.js" %}"></script>
 {% endblock %}
