--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -6,11 +6,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- online: https://www.w3schools.com/w3css/4/w3.css -->
-<link rel="stylesheet" href="/tanks-static/tanks/css/w3.css">
-<link rel="stylesheet" href="/tanks-static/tanks/css/style.css">
+<link rel="stylesheet" href="{% static "tanks/css/w3.css" %}">
+<link rel="stylesheet" href="{% static "tanks/css/style.css" %}">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-<link rel="shortcut icon" type="image/png" href="/tanks-static/tanks/img/tank.png"/>
+<link rel="shortcut icon" type="image/png" href="{% static "tanks/img/tank.png" %}"/>
 <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 
 <body>
