--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -13,7 +13,7 @@
 <link rel="shortcut icon" type="image/png" href="{% static "tanks/img/tank.png" %}"/>
 <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 
-<body>
+<body style="background-color: #e4e4e4;">
 {% block content %}{% endblock %}
 </body>
 
