--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,14 +1,34 @@
 {% extends "base_generic.html" %}
+{% load tag_filters %}
 
 {% block content %}
-    <div class="w3-display-container tanks-login-form-container">
-        <div class="w3-display-middle mc-modal-content">
-            <h2>Sign up</h2>
-            <form method="post">
+    <div class="tanks-page-center">
+        <div class="w3-col w3-hide-small m2 l3">&nbsp</div>
+        <div class="w3-col w3-border s12 m8 l6 w3-padding-16 w3-white">
+            <h2 class="w3-center">Sign up</h2>
+            <form method="post" class="w3-margin">
                 {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit">Sign up</button>
+                <div>
+                    {{ form.username.label_tag }}
+                    {{ form.username|addclass:"w3-input w3-border" }}
+                    {{ form.errors.username }}
+                </div>
+                <div>
+                    {{ form.password1.label_tag }}
+                    {{ form.password1|addclass:"w3-input w3-border" }}
+                    {{ form.errors.password1 }}
+                </div>
+
+                <div>
+                    {{ form.password2.label_tag }}
+                    {{ form.password2|addclass:"w3-input w3-border" }}
+                    {{ form.errors.password2 }}
+                </div>
+                <hr>
+                <button type="submit" class="w3-button w3-border w3-white w3-margin-bottom" style="width: 100%;">Sign up</button>
+                <a href="{% url 'login' %}" class="w3-button w3-border w3-white" style="width: 100%;">Back</a>
             </form>
         </div>
+        <div class="w3-col w3-hide-small m2 l3">&nbsp</div>
     </div>
 {% endblock %}
