--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -2,12 +2,15 @@
 
 <!DOCTYPE html>
 <html style="overflow-x:visible">
-<title>Tanks</title>
-<meta charset="UTF-8">
+<title>Tanks Game</title>
+<meta http-equiv="Content-Type" content="text/html;" charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="A web version of the Tanks Paper Game. Available Online. Play now with a friend!">
+<meta name="keywords" content="HTML,CSS,JavaScript,tanks,paper,game,online,typescript">
+<meta name="author" content="Dimitar Tasev">
 <!-- online: https://www.w3schools.com/w3css/4/w3.css -->
 <link rel="stylesheet" href="{% static "tanks/css/w3.css" %}">
-<link rel="stylesheet" href="{% static "tanks/css/style.css" %}">
+<link rel="stylesheet" href="{% static "tanks/css/style.css " %}">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 <link rel="shortcut icon" type="image/png" href="{% static "tanks/img/tank.png" %}"/>
